--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -30,16 +30,14 @@
                 margin: 20px auto;
             }
 
-
+            .form-check {
+                margin: 0 auto;
+            }
         }
 
         button {
             width: 80%;
             margin: 20px auto;
-        }
-
-        #forRegis {
-            margin: 0 auto;
         }
     </style>
 </head>
@@ -54,7 +52,7 @@
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="text" class="form-control" placeholder="Enter your email" required name="password">
+                <input type="text" class="form-control" placeholder="Enter your email" required name="email">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
