--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -7,79 +7,37 @@
     <title>Anylearn</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #f6f4f4;
-        }
-
-        #content {
-            width: 70%;
-            margin: 0 auto;
-            text-align: center;
-            box-shadow: 2px 2px 2px 2px lightgray;
-            border-radius: 10px;
-            background-color: white;
-
-            .form-group {
-                text-align: left;
-                width: 80%;
-                margin: 20px auto;
-            }
-
-            .form-check {
-                margin: 0 auto;
-            }
-        }
-
-        button {
-            width: 80%;
-            margin: 20px auto;
-        }
-
-        .error {
-            background-color: #f8d7da;
-            color: #842029;
-            padding: 10px;
-            border-radius: 6px;
-            margin-bottom: 15px;
-            border: 1px solid #f5c2c7;
-            font-size: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="/registration.css">
 </head>
 
 <body>
     <div id="content">
         <h1>Registration</h1>
-        <form action="/register" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" placeholder="Enter your username" required name="username">
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="text" class="form-control" placeholder="Enter your email" required name="email">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" placeholder="Enter your password" required name="password">
-            </div>
-            <div class="form-group">
-                <label for="cfmpassword">Confrim Password:</label>
-                <input type="password" class="form-control" placeholder="Confirm your password" required
-                    name="cfmpassword">
-            </div>
-            <button type="submit" class="btn btn-success">Register</button>
-        </form>
         <% if (error) { %>
             <div class="<%= error ? 'error' : '' %>">
                 <%= error %>
             </div>
-            <% } %>
+        <% } %>
+        <form action="/register" method="post">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" placeholder="Enter your username" name="username" value="<%= username %>">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="text" class="form-control" placeholder="Enter your email" name="email" value="<%= email %>">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" placeholder="Enter your password" name="password" value="<%= password %>">
+            </div>
+            <div class="form-group">
+                <label for="cfmpassword">Confrim Password:</label>
+                <input type="password" class="form-control" placeholder="Confirm your password"
+                    name="cfmpassword" value="<%= chkpassword %>">
+            </div>
+            <button type="submit" class="btn btn-success">Register</button>
+        </form>
     </div>
 </body>
 
